[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Zone.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true

[node name="Zone" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="DurationTimer" type="Timer" parent="."]

[node name="CastTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Zone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Zone_body_exited"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
